style.css
* {
  margin: 0;
  padding: 0;
  outline: 0;
}
body {
  margin: 0;
  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 450;
  background-color: #ECE9E9;
  color: #444;
}

table {
  width: 100%;
  background: #ECE9E9;
  border: 0;
  table-layout: auto;
}


table thead {
  background: #ECE9E9;
}

table tr th,
table tr td {
  padding: 0.5625rem 0.625rem;
  font-size: 0.875rem;
  color: #444;
  text-align: left;
  line-height: 1.125rem;
}

table thead tr th {
  padding: 0.5rem 0.625rem 0.625rem;
  font-weight: bold;
}

table tr.even {
  background: #e0e0e0;
}

a {
  text-decoration: none;
  color: #444;
  -webkit-transition: ease 0.2s;
}

a:hover {
  color: #f03030;
  font-weight: 900;
}

a:visited {
  color: #444;
}

.img-wrap {
  vertical-align: middle;
  display: inline-block;
  margin-right: 8px;
  width: 16px;
  height: 16px;
}

.img-wrap img {
  display: block;
  width: 100%;
  height: 100%;
  max-width: none;
  object-fit: contain;
}

.img-wrap + a {
  display: inline-block;
  vertical-align: middle;
}

.hidden {
  display: none;
}

#page-header {
  display: flex;
  align-items: center;
  margin-left: 0.625rem;
  margin-right: 0.625rem;
  
  background: #ECE9E9;
  
  /* fixed at top and left some space 
  position: fixed;
  width: 100%;
  padding: 10px;
  margin-left: 0px;*/
}

#search {
  display: block;
  position: fixed;
  top: 20px;
  right: 20px;
  width: 90px;
  -webkit-transition: width ease 0.2s, opacity ease 0.4s;
  -moz-transition: width ease 0.2s, opacity ease 0.4s;
  -webkit-border-radius: 32px;
  -moz-border-radius: 32px;
  -webkit-box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 1px 3px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.03);
  -moz-box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 1px 3px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.03);
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font: 13px "Helvetica Neue", Arial, sans-serif;
  padding: 4px 10px;
  border: none;
  background: #ECE9E9;
  margin-bottom: 0;
  outline: none;
  opacity: 0.7;
  color: #888;
}

#search:focus {
  border-color: #3498db;
  outline: 2;
  width: 180px;
  opacity: 1.0;
}

/* Hide extra columns so they don't squash file names */
@media (max-width: 600px) {
  table tr > *:nth-child(odd) {
    display: none;
  }

  h1 {
    font-size: 1.5em;
  }

  #page-header {
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    margin-bottom: 1em;
	padding-bottom: 40px;
  }
  
}

@media (max-width: 400px) {

  h1 {
    font-size: 1.375em;
  }
  * {
    font-size: 30px;
    line-height: 30px;
    padding: 0;
  }
}

